# industrial-spec-parser

./: LICENSE  README.md  pyproject.toml
src/: CONTRIBUTING.md  __init__.py
src/.github/ISSUE_TEMPLATE/: bug_report.md
